deploy/monitoring/ntopng/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntopng
  namespace: monitoring
  labels:
    app: ntopng
spec:
  type: ClusterIP
  selector:
    app: ntopng
  ports:
    - port: 3000
      targetPort: 3000
      name: web
    - port: 9101
      targetPort: 9101
      name: prometheus
